--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,1 +1,7 @@
-<h2>Welcome <%= current_user.role %> user</h2>
+<div class='container'>
+  <div class="landing-page">
+    <%= image_tag('shield.png') %>
+    <h1><strong>Johson & Sepp Associates</strong></h1><br><br>
+    <h2><strong>Invest with confidence.</strong></h2>
+  </div>
+</div>
