--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,8 @@
-  <nav class="navbar navbar-inverse navbar-fixed-bottom">
-  <div class="container">
-    
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
+  <div class="footer">
+    <%= link_to 'privacy policy', home_path, class: 'nav-link' %><br>
+    <%= link_to 'terms & conditions', home_path, class: 'nav-link' %><br>
+    <%= link_to image_tag('twitter.png'), home_path, class: 'nav-link' %>
+    <%= link_to image_tag('fb.png'), home_path, class: 'nav-link' %>
   </div>
 </nav>
