--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,38 +8,27 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Johnson and Sepp</a>
+      <%= link_to "Johnson & Sepp Associates", home_path, class: "navbar-brand brand-name nav-link" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
+        <li>
+          <%= link_to 'About', items_path, class: 'nav-link' %>
         </li>
         <li>
-          <% if logged_in? %>
-            <%= button_to 'Logout', logout_path, method: :delete %>
-          <% else %>
-            <%= link_to 'Login', login_path, method: :get %>
-          <% end %>
+          <%= link_to 'Investment Structure', items_path, class: 'nav-link' %>
         </li>
         <li>
-          <%= link_to 'Items', items_path %>
+          <%= link_to 'Opportunities', items_path, class: 'nav-link' %>
         </li>
-        <li>
-          <%= button_to cart_index_path, method: :get, class: "btn btn-success"  do %>
-              <span class="glyphicon glyphicon-shopping-cart"></span> <%= "Cart (#{load_cart.count_items})" %>
-          <% end %>
-        </li>
+        <% if logged_in? %>
+          <li><%= link_to 'Your Investments', orders_path, class: 'nav-link' %></li>
+          <li><%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link' %></li>
+        <% else %>
+          <li><%= link_to 'Login', login_path, method: :get, class: 'nav-link' %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
