--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <%= render partial: 'layouts/nav' %>
 
-  <div class="container-fluid">
+  <div class="container primary-view">
     <% flash.each do |type, message| %>
       <%= content_tag :div, message, id: "flash_#{type}" %>
     <% end %>
