--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,7 +1,11 @@
 <div class='container'>
   <div class="landing-page">
     <%= image_tag('shield.png') %>
-    <h1><strong>Johson & Sepp Associates</strong></h1><br><br>
-    <h2><strong>Invest with confidence.</strong></h2>
+    <div class="title">
+      <strong>Johson & Sepp Associates</strong>
+    </div>
+    <div class="header">
+      <strong>Invest with confidence.</strong>
+    </div>
   </div>
 </div>
