--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,11 +1,13 @@
-<div class='container'>
-  <div class="landing-page">
-    <%= image_tag('shield.png') %>
-    <div class="title">
-      <strong>Johson & Sepp Associates</strong>
-    </div>
-    <div class="header">
-      <strong>Invest with confidence.</strong>
+<div class="home">
+  <div class='container'>
+    <div class="landing-page">
+      <%= image_tag('shield.png') %>
+      <div class="title">
+        <strong>Johson & Sepp Associates</strong>
+      </div>
+      <div class="header">
+        <strong>Invest with confidence.</strong>
+      </div>
     </div>
   </div>
 </div>
