--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
           <%= link_to 'About', items_path, class: 'nav-link' %>
         </li>
         <li>
-          <%= link_to 'Investment Structure', items_path, class: 'nav-link' %>
+          <%= link_to 'Investment Structure', structure_path, class: 'nav-link' %>
         </li>
         <li>
           <%= link_to 'Opportunities', items_path, class: 'nav-link' %>
