--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,7 +9,7 @@ body {
 
 .brand-name {
   font-family: 'Old Standard TT', serif;
-  font-size: 125%;
+  font-size: 120%;
 }
 
 .navbar {
@@ -41,6 +41,11 @@ body {
 
 .primary-view {
   text-align: center;
+  margin-bottom: 100px;
+}
+
+#house-flip img {
+  border-radius: 25px;
 }
 
 @media (min-width: 992px) { 
@@ -63,6 +68,11 @@ body {
 
   #invest-chart img {
     width: 250px;
+  }
+
+  #house-flip img {
+    margin-top: 30px;
+    width: 300px;
   }
 
   .primary-view .landing-page .header {
@@ -101,6 +111,11 @@ body {
     width: 200px;
   }
 
+  #house-flip img {
+    margin-top: 50px;
+    width: 225px;
+  }
+
   .primary-view .landing-page .header {
     margin-top: 35px;
   }
@@ -134,6 +149,10 @@ body {
   }
 
   #invest-chart img {
+    display: none;
+  }
+
+  #house-flip img {
     display: none;
   }
 
