--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <%= link_to 'About', items_path, class: 'nav-link' %>
+          <%= link_to 'About', about_path, class: 'nav-link' %>
         </li>
         <li>
           <%= link_to 'Investment Structure', structure_path, class: 'nav-link' %>
@@ -24,7 +24,7 @@
           <%= link_to 'Opportunities', items_path, class: 'nav-link' %>
         </li>
         <% if logged_in? %>
-          <li><%= link_to 'Your Investments', orders_path, class: 'nav-link' %></li>
+          <li><%= link_to 'Your Portfolio', orders_path, class: 'nav-link' %></li>
           <li><%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link' %></li>
         <% else %>
           <li><%= link_to 'Login', login_path, method: :get, class: 'nav-link' %></li>
