--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -21,10 +21,10 @@
           <%= link_to 'Investment Structure', structure_path, class: 'nav-link' %>
         </li>
         <li>
-          <%= link_to 'Opportunities', items_path, class: 'nav-link' %>
+          <%= link_to 'Opportunities', projects_path, class: 'nav-link' %>
         </li>
         <% if logged_in? %>
-          <li><%= link_to 'Your Portfolio', orders_path, class: 'nav-link' %></li>
+          <li><%= link_to 'Your Portfolio', investments_path, class: 'nav-link' %></li>
           <li><%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link' %></li>
         <% else %>
           <li><%= link_to 'Login', login_path, method: :get, class: 'nav-link' %></li>
